--- a/debian/changelog
+++ b/debian/changelog
@@ -1,6 +1,6 @@
-sayonara (0.8.2) stable; urgency=low
+sayonara (0.8.2) unstable; urgency=low
 
-  * see http://sayonara-player.com/changelog 
+  * Initial Release (Closes: #800406) 
 
  -- Lucio Carreras <luciocarreras@gmail.com>  Sun, 13 Sep 2015 19:33:16 +0200
 
