--- a/debian/changelog
+++ b/debian/changelog
@@ -1,4 +1,4 @@
-sayonara (0.8.2-1) unstable; urgency=low
+sayonara (0.8.2+git20160226-1) unstable; urgency=low
 
   * Initial Release (Closes: #800406) 
 
