--- a/debian/changelog
+++ b/debian/changelog
@@ -1,4 +1,4 @@
-sayonara (0.8.2) stable; urgency=low
+sayonara (0.8.3-1git2~20160506) unstable; urgency=low
 
   * Initial Release (Closes: #800406) 
 
