--- a/src/Languages/CMakeLists.txt
+++ b/src/Languages/CMakeLists.txt
@@ -18,11 +18,25 @@ QT5_ADD_TRANSLATION(QM_FILES
 	sayonara_lang_zh_cn.ts
 )
 
+
+IF(WIN32)
+	SET(TRANSLATION_TARGET_PATH
+		share/translations
+	)
+ELSE()
+	SET(TRANSLATION_TARGET_PATH
+		share/sayonara/translations
+	)
+ENDIF()
+
+
 ADD_CUSTOM_TARGET(TRANSLATIONS_TARGET DEPENDS ${QM_FILES})
-INSTALL(DIRECTORY ./icons DESTINATION share/sayonara/translations FILES_MATCHING
+INSTALL(DIRECTORY ./icons DESTINATION ${TRANSLATION_TARGET_PATH} FILES_MATCHING
     PATTERN "*.png"
     PATTERN "*.svn" EXCLUDE
 )
 
 ADD_LIBRARY(${PROJECT_NAME} STATIC ${QM_FILES})
-INSTALL(FILES ${QM_FILES} DESTINATION share/sayonara/translations)
+
+
+INSTALL(FILES ${QM_FILES} DESTINATION ${TRANSLATION_TARGET_PATH})
