turkish language support

--- a/src/Languages/CMakeLists.txt
+++ b/src/Languages/CMakeLists.txt
@@ -14,6 +14,7 @@ QT5_ADD_TRANSLATION(QM_FILES
 	sayonara_lang_pt.ts
 	sayonara_lang_ro.ts
 	sayonara_lang_ru.ts
+	sayonara_lang_tr.ts
 	sayonara_lang_ua.ts
 	sayonara_lang_zh_cn.ts
 )
